krb5 (1.15.1-1) UNRELEASED; urgency=medium

  *  New Upstream Version
      - Samba wants this, Closes: #861651
        * Include krb5-otp tmpfile for freeipa, Closes: #859243
  * Move doxygen to build-indep, Closes: #754139

 -- Sam Hartman <hartmans@debian.org>  Sun, 09 Jul 2017 14:38:55 -0400

krb5 (1.15-2) experimental; urgency=medium


  * Upstream patches to fix startup if getaddrinfo() returns a wildcard v6
    address, and to fix handling of explicitly specified v4 wildcard
    address; regression over previous versions, Closes: #860767
  * Fix SRV lookups to respect udp_preference_limit, regression over
    previous versions with OTP, Closes: #856307

 -- Sam Hartman <hartmans@debian.org>  Wed, 19 Apr 2017 16:50:01 -0400

krb5 (1.15-1) unstable; urgency=medium

  [ Benjamin Kaduk ]
  * New upstream version
    - Make zap() more reliable and use it more consistently; the
      previous version could be optimized out by gcc 5.1 or later
    - Update license statement in ccapi/common/win/OldCC/autolock.hxx,
      Closes: #846088
  * Update Debian-HURD-compatibility.patch, Closes: #845381
  * Bump debhelper compat level to 9

  [ Sam Hartman ]
  * Actually build and ship German translations, Closes: #842497

 -- Benjamin Kaduk <kaduk@mit.edu>  Sun, 04 Dec 2016 15:37:57 -0500

krb5 (1.15~beta1-1) unstable; urgency=low

  [ Benjamin Kaduk ]
  * New upstream version
    - Upstream's tarball is now DFSG-free
    - Builds against openssl 1.1.0, Closes: #828369
    - Add support for the AES-SHA2 enctypes
    - Add support to kadmin for remote extraction of current keys
      and principal attributes to prevent such extraction
    - Add DNS auto-discovery using URI records in addition to SRV records
    - Improve LDAP backend to contain some features previously only
      present in the BDB backend
    - Use the getrandom system call on supported Linux kernels
    - Use SHA256 instead of MD5 for hashing authenticators in the replay cache