@@ -1,4 +1,0 @@
-Any file places in this directory ending in .conf will be read as a
-GSS-API mechanism configuration file, and the mechanisms described in
-that file will be dynamically loaded.
-
