@@ -1,9 +1,9 @@
 Source: krb5
 Section: net
 Priority: standard
-Build-Depends: debhelper (>= 9), byacc | bison,
+Build-Depends: debhelper (>= 10), byacc | bison,
  comerr-dev, docbook-to-man, 
- libkeyutils-dev [linux-any], libldap2-dev,
+ libkeyutils-dev [linux-any], libldap2-dev <!profile.stage1>,
  libncurses5-dev, libssl-dev,  ss-dev, 
  libverto-dev (>= 0.2.4), pkg-config, dh-systemd
 Build-Depends-Indep: python, python-cheetah, python-lxml, python-sphinx, doxygen, doxygen-latex, texlive-generic-extra
@@ -57,6 +57,7 @@ Description: MIT Kerberos key server (KDC)
 Package: krb5-kdc-ldap
 Architecture: any
 Priority: extra
+Build-Profiles: <!stage1>
 Depends: ${misc:Depends}, ${shlibs:Depends}, krb5-kdc (= ${binary:Version})
 Description: MIT Kerberos key server (KDC) LDAP plugin
  Kerberos is a system for authenticating users and services on a network.
